--- a/grpc-benchmark/envoy.yaml
+++ b/grpc-benchmark/envoy.yaml
@@ -1,8 +1,3 @@
-admin:
-  access_log_path: /tmp/admin_access.log
-  address:
-    socket_address: { address: 0.0.0.0, port_value: 9901 }
-
 static_resources:
   listeners:
   - name: listener_0
@@ -10,9 +5,8 @@ static_resources:
       socket_address: { address: 0.0.0.0, port_value: 8080 }
     filter_chains:
     - filters:
-      - name: envoy.filters.network.http_connection_manager
-        typed_config:
-          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
+      - name: envoy.http_connection_manager
+        config:
           codec_type: auto
           stat_prefix: ingress_http
           route_config:
@@ -33,22 +27,13 @@ static_resources:
                 max_age: "1728000"
                 expose_headers: custom-header-1,grpc-status,grpc-message
           http_filters:
-          - name: envoy.filters.http.grpc_web
-          - name: envoy.filters.http.cors
-          - name: envoy.filters.http.router
+          - name: envoy.grpc_web
+          - name: envoy.cors
+          - name: envoy.router
   clusters:
   - name: greeter_service
     connect_timeout: 0.25s
     type: logical_dns
     http2_protocol_options: {}
     lb_policy: round_robin
-    # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
-    load_assignment:
-      cluster_name: cluster_0
-      endpoints:
-        - lb_endpoints:
-            - endpoint:
-                address:
-                  socket_address:
-                    address: 0.0.0.0
-                    port_value: 9090
+    hosts: [{ socket_address: { address: 0.0.0.0, port_value: 9090 }}]
