--- a/rest-benchmark/package.json
+++ b/rest-benchmark/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.7",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "pug": "^3.0.0",
     "typescript": "^3.9.6"
   }
 }
